# OS-ex3-Map_Reduce

./: CMakeLists.txt  Makefile  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp
